--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,9 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
         <activity android:name=".activities.MainActivity"></activity>
 
@@ -43,15 +41,11 @@
             android:parentActivityName="com.example.cassel.ct_keep.activities.MainActivity"></activity>
 
         <activity
-            android:name=".activities.BanheiroActivity"
+            android:name=".activities.FormBanheiroActivity"
             android:parentActivityName="com.example.cassel.ct_keep.activities.MainActivity"></activity>
 
         <activity
-            android:name=".activities.SalaActivity"
-            android:parentActivityName="com.example.cassel.ct_keep.activities.MainActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:name=".activities.FormSalaActivity"
+            android:parentActivityName="com.example.cassel.ct_keep.activities.MainActivity"></activity>
     </application>
 </manifest>
